openldap/destinationrule-ldap.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
  name: ldap
  namespace: default
spec:
  host: phpldapadmin.public-service.svc.cluster.local
