openldap/virtualservice-ldap2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ldap2
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match: 
    - uri:
        prefix: "/ldap"
    redirect:
      uri: "/ldap"
      host: phpldapadmin.public-service.svc.cluster.local
      port:
        number: 8080
